# csv_iterator

./: CMakeLists.txt  LICENSE  Makefile  README  README.markdown  README.md
cmake/: FindCppUnit.cmake
include/: csv_iterator.hpp
include/details/: csv_helpers.hpp
scripts/: createCSV
src/: main.cpp
test/: csv_iteratorTest.cpp  main.cpp
test/resources/: simple-bzip.csv.bz2  simple-error.csv  simple-withParseError.csv  simple.csv
